--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3432,42 +3432,52 @@ Changhong:
 
 # Cherry Mobile
 'Cherry Mobile':
-  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2|Y7_LTE|Y[73])|Flare[ _](?:S Play|S[57] Plus|S5|S7 Max|HD_MAX|LITE|XL Plus|X_V2|Y[67]_Pro|Y3s|Tab)|Fusion Bolt|OMEGA HD 4'
+  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[123568]|P[13]|S[4-8]|X2|Y[367]|S Play|HD|LITE|XL|X_V2|Y3s|Tab)(?:[ _](?:Pro|Plus|Max|LTE))?|Fusion Bolt|OMEGA HD 4'
   device: 'smartphone'
   models:
     - regex: 'Cherry(?: ?Mobile)?[ _]?([^/;]+) Build'
       model: '$1'
     - regex: '(Flare2X)'
       model: '$1'
+    - regex: 'Flare_HD_([45])'
+      model: 'Flare HD $1'
     - regex: 'Flare_HD_MAX'
       model: 'Flare HD Max'
     - regex: 'FLARE LITE'
       model: 'Flare Lite'
     - regex: 'Flare S Play'
       model: 'Flare S Play'
+    - regex: 'Flare[_ ]J([26])S'
+      model: 'Flare J$1s'
+    - regex: 'Flare_(J2|S7)_Prime'
+      model: 'Flare $1 Prime'
+    - regex: 'Flare_S7_Deluxe'
+      model: 'Flare S7 Deluxe'
+    - regex: 'Flare_S7_Power'
+      model: 'Flare S7 Power'
     - regex: 'Flare[_ ]Y([367])[_ ]Pro'
       model: 'Flare Y$1 Pro'
     - regex: 'Flare XL Plus'
       model: 'Flare XL Plus'
     - regex: 'Flare[ _]X[_ ]V2'
       model: 'Flare X V2'
-    - regex: 'Flare[ _](A2|J3|P1|S[46])[ _]Lite'
+    - regex: 'Flare[ _](A2|J3|P1|S[467])[ _]Lite'
       model: 'Flare $1 Lite'
-    - regex: 'Flare[ _](J[12]|S5|Y3)[ _]mini'
+    - regex: 'Flare[ _](J[12]|S[57]|Y3|J6)[ _]mini'
       model: 'Flare $1 Mini'
-    - regex: 'Flare J2S'
-      model: 'Flare J2s'
+    - regex: 'Flare_J2_2018'
+      model: 'Flare J2 (2018)'
     - regex: 'Flare S4 Max LTE'
       model: 'Flare S4 Max LTE'
-    - regex: 'Flare S([47]) Max'
-      model: 'Flare S$1 Max'
+    - regex: 'Flare[_ ](S[47]|J2)[_ ]Max'
+      model: 'Flare $1 Max'
     - regex: 'FlareS5LiteDTV'
       model: 'Flare S5 Lite DTV'
-    - regex: 'Flare[_ ]S([567])[_ ]Plus'
-      model: 'Flare S$1 Plus'
+    - regex: 'Flare[_ ](S[567]|J6)[_ ]Plus'
+      model: 'Flare $1 Plus'
     - regex: 'FLARE S6 POWER'
       model: 'Flare S6 Power'
-    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S[4568]|X2|Y3s|Y7_LTE|Y[73])'
+    - regex: 'Flare(?:[ _])?(4|A[123]|J8 LTE|J[13568]|P[13]|S[4-8]|X2|Y3s|Y7_LTE|Y[673])'
       model: 'Flare $1'
     - regex: 'OMEGA HD 4'
       model: 'Omega HD 4'
